downgrade to vs2015 versions of packages

--- a/VsIntegration/packages.config
+++ b/VsIntegration/packages.config
@@ -1,32 +1,35 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Microsoft.VisualStudio.ComponentModelHost" version="15.0.26201" targetFramework="net472" />
-  <package id="Microsoft.VisualStudio.CoreUtility" version="15.0.26201" targetFramework="net472" />
-  <package id="Microsoft.VisualStudio.Editor" version="15.0.26201" targetFramework="net472" />
-  <package id="Microsoft.VisualStudio.Imaging" version="15.0.26201" targetFramework="net472" />
-  <package id="Microsoft.VisualStudio.Imaging.Interop.14.0.DesignTime" version="14.3.26930" targetFramework="net472" />
-  <package id="Microsoft.VisualStudio.Language.Intellisense" version="15.0.26201" targetFramework="net472" />
+  <package id="Microsoft.VisualStudio.ComponentModelHost" version="14.0.25424" targetFramework="net472" />
+  <package id="Microsoft.VisualStudio.CoreUtility" version="14.0.23205" targetFramework="net472" />
+  <package id="Microsoft.VisualStudio.Editor" version="14.0.23205" targetFramework="net472" />
+  <package id="Microsoft.VisualStudio.Imaging" version="14.0.23205" targetFramework="net472" />
+  <package id="Microsoft.VisualStudio.Imaging.Interop.14.0.DesignTime" version="14.0.23205" targetFramework="net472" />
+  <package id="Microsoft.VisualStudio.Language.Intellisense" version="14.0.23205" targetFramework="net472" />
   <package id="Microsoft.VisualStudio.OLE.Interop" version="7.10.6071" targetFramework="net46" />
   <package id="Microsoft.VisualStudio.SDK.Analyzers" version="15.8.36" targetFramework="net472" />
   <package id="Microsoft.VisualStudio.SDK.EmbedInteropTypes" version="15.0.16" targetFramework="net472" />
-  <package id="Microsoft.VisualStudio.Shell.15.0" version="15.0.26201" targetFramework="net472" />
-  <package id="Microsoft.VisualStudio.Shell.Framework" version="15.0.26201" targetFramework="net472" />
+  <package id="Microsoft.VisualStudio.Shell.14.0" version="14.0.23205" targetFramework="net472" />
+  <package id="Microsoft.VisualStudio.Shell.Immutable.10.0" version="10.0.30319" targetFramework="net472" />
+  <package id="Microsoft.VisualStudio.Shell.Immutable.11.0" version="11.0.50727" targetFramework="net472" />
+  <package id="Microsoft.VisualStudio.Shell.Immutable.12.0" version="12.0.21003" targetFramework="net472" />
+  <package id="Microsoft.VisualStudio.Shell.Immutable.14.0" version="14.0.23205" targetFramework="net472" />
   <package id="Microsoft.VisualStudio.Shell.Interop" version="7.10.6072" targetFramework="net46" />
   <package id="Microsoft.VisualStudio.Shell.Interop.10.0" version="10.0.30320" targetFramework="net46" />
   <package id="Microsoft.VisualStudio.Shell.Interop.11.0" version="11.0.61031" targetFramework="net472" />
   <package id="Microsoft.VisualStudio.Shell.Interop.12.0" version="12.0.30111" targetFramework="net472" />
-  <package id="Microsoft.VisualStudio.Shell.Interop.14.0.DesignTime" version="14.3.26929" targetFramework="net472" />
+  <package id="Microsoft.VisualStudio.Shell.Interop.14.0.DesignTime" version="14.0.23205" targetFramework="net472" />
   <package id="Microsoft.VisualStudio.Shell.Interop.8.0" version="8.0.50728" targetFramework="net46" />
   <package id="Microsoft.VisualStudio.Shell.Interop.9.0" version="9.0.30729" targetFramework="net46" />
-  <package id="Microsoft.VisualStudio.Text.Data" version="15.0.26201" targetFramework="net472" />
-  <package id="Microsoft.VisualStudio.Text.Logic" version="15.0.26201" targetFramework="net472" />
-  <package id="Microsoft.VisualStudio.Text.UI" version="15.0.26201" targetFramework="net472" />
-  <package id="Microsoft.VisualStudio.Text.UI.Wpf" version="15.0.26201" targetFramework="net472" />
+  <package id="Microsoft.VisualStudio.Text.Data" version="14.0.23205" targetFramework="net472" />
+  <package id="Microsoft.VisualStudio.Text.Logic" version="14.0.23205" targetFramework="net472" />
+  <package id="Microsoft.VisualStudio.Text.UI" version="14.0.23205" targetFramework="net472" />
+  <package id="Microsoft.VisualStudio.Text.UI.Wpf" version="14.0.23205" targetFramework="net472" />
   <package id="Microsoft.VisualStudio.TextManager.Interop" version="7.10.6071" targetFramework="net46" />
   <package id="Microsoft.VisualStudio.TextManager.Interop.8.0" version="8.0.50728" targetFramework="net46" />
-  <package id="Microsoft.VisualStudio.Threading" version="15.0.240" targetFramework="net472" />
+  <package id="Microsoft.VisualStudio.Threading" version="14.0.50702" targetFramework="net472" />
   <package id="Microsoft.VisualStudio.Threading.Analyzers" version="15.8.168" targetFramework="net472" />
-  <package id="Microsoft.VisualStudio.Utilities" version="15.0.26201" targetFramework="net472" />
+  <package id="Microsoft.VisualStudio.Utilities" version="14.0.23205" targetFramework="net472" />
   <package id="Microsoft.VisualStudio.Validation" version="15.0.82" targetFramework="net472" />
   <package id="MSBuildTasks" version="1.5.0.214" targetFramework="net46" developmentDependency="true" />
   <package id="Nerdbank.GitVersioning" version="2.1.84" targetFramework="net46" developmentDependency="true" />
