--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -12,6 +12,7 @@ jobs:
     visualStudioVersion: '2015'
     artifactName: 'SpecFlow.VisualStudio.VS2015.CI-BuildResult'
     artifactFileName: '$(Build.ArtifactStagingDirectory)/SpecFlow.VisualStudio.VS2015.zip'
+    appInsightsInstrumentationKey: '$(AppInsightsInstrumentationKey)'
     pool:
       name: 'Hosted'
 
