--- a/build.yml
+++ b/build.yml
@@ -12,7 +12,7 @@ jobs:
   pool: ${{ parameters.pool }}
   variables:
     specFlowVisualStudioVersion: ${{ parameters.visualStudioVersion }}
-    appInsightsInstrumentationKey: ${{ parameters.appInsightsInstrumentationKey }}
+    instrumentationKey: ${{ parameters.appInsightsInstrumentationKey }}
   steps:
   - task: NuGetToolInstaller@0
     displayName: 'Use NuGet'
@@ -29,7 +29,7 @@ jobs:
     inputs: 
       filePath: build.ps1
       workingDirectory: ./
-      arguments: Release $(specFlowVisualStudioVersion) $(appInsightsInstrumentationKey)
+      arguments: Release $(specFlowVisualStudioVersion) $(instrumentationKey)
 
   - task: ArchiveFiles@2
     displayName: 'Archive $(Build.SourcesDirectory)'
