--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -22,6 +22,7 @@ jobs:
     visualStudioVersion: '2017'
     artifactName: 'SpecFlow.VisualStudio.VS2017.CI-BuildResult'
     artifactFileName: '$(Build.ArtifactStagingDirectory)/SpecFlow.VisualStudio.VS2017.zip'
+    appInsightsInstrumentationKey: '$(AppInsightsInstrumentationKey)'
     pool:
       name: 'Hosted VS2017'
 
@@ -31,6 +32,7 @@ jobs:
     visualStudioVersion: '2019'
     artifactName: 'SpecFlow.VisualStudio.VS2019.CI-BuildResult'
     artifactFileName: '$(Build.ArtifactStagingDirectory)/SpecFlow.VisualStudio.VisualStudioIntegration.zip'
+    appInsightsInstrumentationKey: '$(AppInsightsInstrumentationKey)'
     pool:
       name: 'Hosted Windows 2019 with VS2019'
 
