--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -12,7 +12,7 @@ jobs:
     visualStudioVersion: '2015'
     artifactName: 'SpecFlow.VisualStudio.VS2015.CI-BuildResult'
     artifactFileName: '$(Build.ArtifactStagingDirectory)/SpecFlow.VisualStudio.VS2015.zip'
-    instrumentationKey: $(AppInsightsInstrumentationKey)
+    appInsightsInstrumentationKey: $(AppInsightsInstrumentationKey)
     pool:
       name: 'Hosted'
 
@@ -22,7 +22,7 @@ jobs:
     visualStudioVersion: '2017'
     artifactName: 'SpecFlow.VisualStudio.VS2017.CI-BuildResult'
     artifactFileName: '$(Build.ArtifactStagingDirectory)/SpecFlow.VisualStudio.VS2017.zip'
-    instrumentationKey: $(AppInsightsInstrumentationKey)
+    appInsightsInstrumentationKey: $(AppInsightsInstrumentationKey)
     pool:
       name: 'Hosted VS2017'
 
@@ -32,7 +32,7 @@ jobs:
     visualStudioVersion: '2019'
     artifactName: 'SpecFlow.VisualStudio.VS2019.CI-BuildResult'
     artifactFileName: '$(Build.ArtifactStagingDirectory)/SpecFlow.VisualStudio.VisualStudioIntegration.zip'
-    instrumentationKey: $(AppInsightsInstrumentationKey)
+    appInsightsInstrumentationKey: $(AppInsightsInstrumentationKey)
     pool:
       name: 'Hosted Windows 2019 with VS2019'
 
