--- a/VsIntegration/packages.config
+++ b/VsIntegration/packages.config
@@ -25,6 +25,7 @@
   <package id="Microsoft.VisualStudio.Threading" version="14.1.111" targetFramework="net46" />
   <package id="Microsoft.VisualStudio.Utilities" version="14.3.25407" targetFramework="net46" />
   <package id="Microsoft.VisualStudio.Validation" version="14.1.111" targetFramework="net46" />
+  <package id="MSBuild.AdditionalTasks" version="0.1.20" targetFramework="net46" />
   <package id="MSBuildTasks" version="1.5.0.214" targetFramework="net46" developmentDependency="true" />
   <package id="Nerdbank.GitVersioning" version="2.1.84" targetFramework="net46" developmentDependency="true" />
   <package id="Newtonsoft.Json" version="9.0.1" targetFramework="net46" />
