--- a/VsIntegration/TechTalk.SpecFlow.VsIntegration.csproj
+++ b/VsIntegration/TechTalk.SpecFlow.VsIntegration.csproj
@@ -1,6 +1,11 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003" ToolsVersion="15.0">
+  <Import Project="..\packages\MSBuild.AdditionalTasks.0.1.20\build\MSBuild.AdditionalTasks.props" Condition="Exists('..\packages\MSBuild.AdditionalTasks.0.1.20\build\MSBuild.AdditionalTasks.props')" />
   <Import Project="..\TechTalk.SpecFlow.VsIntegration.Common.targets" />
+  <PropertyGroup Condition="'$(AppInsightsInstrumentationKey)' == ''">
+    <!-- This is only the testing instance's instrumentation key -->
+    <AppInsightsInstrumentationKey>88c7861a-5106-4d48-b545-b26ee23e1f21</AppInsightsInstrumentationKey>
+  </PropertyGroup>
   <PropertyGroup>
     <FileUpgradeFlags>
     </FileUpgradeFlags>
@@ -209,6 +214,9 @@
       <EmbedInteropTypes>False</EmbedInteropTypes>
       <Private>False</Private>
     </Reference>
+    <Reference Include="Microsoft.ApplicationInsights, Version=2.9.1.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <HintPath>..\packages\Microsoft.ApplicationInsights.2.9.1\lib\net46\Microsoft.ApplicationInsights.dll</HintPath>
+    </Reference>
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="Microsoft.VisualBasic" />
     <Reference Include="Microsoft.VisualStudio.Designer.Interfaces, Version=1.0.5000.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
@@ -238,6 +246,9 @@
     <Reference Include="System.Core" />
     <Reference Include="System.Data" />
     <Reference Include="System.Design" />
+    <Reference Include="System.Diagnostics.DiagnosticSource, Version=4.0.3.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51, processorArchitecture=MSIL">
+      <HintPath>..\packages\System.Diagnostics.DiagnosticSource.4.5.0\lib\net46\System.Diagnostics.DiagnosticSource.dll</HintPath>
+    </Reference>
     <Reference Include="System.Drawing" />
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Web" />
@@ -279,16 +290,26 @@
     </COMReference>
   </ItemGroup>
   <ItemGroup>
+    <None Include=".build\*" />
     <Compile Include="..\CommonAssemblyInfo.cs">
       <Link>Properties\CommonAssemblyInfo.cs</Link>
     </Compile>
     <Compile Include="Analytics\AnalyticsTransmitter.cs" />
+    <Compile Include="Analytics\AppInsightsAnalyticsTransmitterSink.cs" />
+    <Compile Include="Analytics\AppInsightsExtensionLoadedDataTransformer.cs" />
+    <None Include="Analytics\AppInsightsInstrumentationKey.template.cs" />
+    <Compile Include="Analytics\AppInsightsInstrumentationKey.cs" />
     <Compile Include="Analytics\ConsoleAnalyticsTransmitterSink.cs" />
     <Compile Include="Analytics\EnableAnalyticsChecker.cs" />
     <Compile Include="Analytics\IAnalyticsTransmitterSink.cs" />
+    <Compile Include="Analytics\IAppInsightsEventConverter.cs" />
     <Compile Include="Analytics\IEnableAnalyticsChecker.cs" />
+    <Compile Include="Analytics\IIdeInformationStore.cs" />
     <Compile Include="Analytics\IUserUniqueIdStore.cs" />
     <Compile Include="Analytics\RegistryUserUniqueIdStore.cs" />
+    <Compile Include="Analytics\TelemetryClientWrapper.cs" />
+    <Compile Include="Analytics\VisualStudioIdeInformationStore.cs" />
+    <Compile Include="Analytics\VisualStudioProjectTargetFrameworksProvider.cs" />
     <Compile Include="AutoComplete\CompletionCommandFilter.cs" />
     <Compile Include="AutoComplete\CustomCompletionSet.cs" />
     <Compile Include="AutoComplete\GherkinCompletionCommandFilter.cs" />
@@ -547,6 +568,16 @@
     </PropertyGroup>
     <Error Condition="!Exists('..\packages\MSBuildTasks.1.5.0.214\build\MSBuildTasks.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\MSBuildTasks.1.5.0.214\build\MSBuildTasks.targets'))" />
     <Error Condition="!Exists('..\packages\Nerdbank.GitVersioning.2.1.84\build\Nerdbank.GitVersioning.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\Nerdbank.GitVersioning.2.1.84\build\Nerdbank.GitVersioning.targets'))" />
+    <Error Condition="!Exists('..\packages\MSBuild.AdditionalTasks.0.1.20\build\MSBuild.AdditionalTasks.props')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\MSBuild.AdditionalTasks.0.1.20\build\MSBuild.AdditionalTasks.props'))" />
+    <Error Condition="!Exists('..\packages\MSBuild.AdditionalTasks.0.1.20\build\MSBuild.AdditionalTasks.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\MSBuild.AdditionalTasks.0.1.20\build\MSBuild.AdditionalTasks.targets'))" />
   </Target>
   <Import Project="..\packages\Nerdbank.GitVersioning.2.1.84\build\Nerdbank.GitVersioning.targets" Condition="Exists('..\packages\Nerdbank.GitVersioning.2.1.84\build\Nerdbank.GitVersioning.targets')" />
+  <Import Project="..\packages\MSBuild.AdditionalTasks.0.1.20\build\MSBuild.AdditionalTasks.targets" Condition="Exists('..\packages\MSBuild.AdditionalTasks.0.1.20\build\MSBuild.AdditionalTasks.targets')" />
+  <Target Name="RunTokenReplace" AfterTargets="GetBuildVersion" BeforeTargets="BeforeCompile" Condition="$(DesignTimeBuild) != 'true' OR '$(BuildingProject)' == 'true'">
+    <ReplaceTextInFileTask InputFile="$(ProjectDir)\\Analytics\\AppInsightsInstrumentationKey.template.cs" OutputFile="$(ProjectDir)\\Analytics\\AppInsightsInstrumentationKey.cs" TextToReplace="&lt;InstrumentationKeyGoesHere&gt;" TextToReplaceWith="$(AppInsightsInstrumentationKey)" />
+    <ItemGroup>
+      <Compile Remove="$(ProjectDir)\\Analytics\\AppInsightsInstrumentationKey.template.cs" />
+      <Compile Include="$(ProjectDir)\\Analytics\\AppInsightsInstrumentationKey.cs" />
+    </ItemGroup>
+  </Target>
 </Project>
