--- a/VsIntegration/packages.config
+++ b/VsIntegration/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Microsoft.ApplicationInsights" version="2.9.1" targetFramework="net46" />
   <package id="Microsoft.VisualStudio.ComponentModelHost" version="14.0.25424" targetFramework="net46" />
   <package id="Microsoft.VisualStudio.CoreUtility" version="14.3.25407" targetFramework="net46" />
   <package id="Microsoft.VisualStudio.Editor" version="14.3.25407" targetFramework="net46" />
@@ -24,9 +25,11 @@
   <package id="Microsoft.VisualStudio.Threading" version="14.1.111" targetFramework="net46" />
   <package id="Microsoft.VisualStudio.Utilities" version="14.3.25407" targetFramework="net46" />
   <package id="Microsoft.VisualStudio.Validation" version="14.1.111" targetFramework="net46" />
+  <package id="MSBuild.AdditionalTasks" version="0.1.20" targetFramework="net46" />
   <package id="MSBuildTasks" version="1.5.0.214" targetFramework="net46" developmentDependency="true" />
   <package id="Nerdbank.GitVersioning" version="2.1.84" targetFramework="net46" developmentDependency="true" />
   <package id="Newtonsoft.Json" version="9.0.1" targetFramework="net46" />
   <package id="SpecFlow" version="1.9.0" targetFramework="net45" />
   <package id="SpecFlow.CustomPlugin" version="1.9.0" targetFramework="net45" />
+  <package id="System.Diagnostics.DiagnosticSource" version="4.5.0" targetFramework="net46" />
 </packages>
