--- a/build.yml
+++ b/build.yml
@@ -6,12 +6,14 @@ parameters:
   artifactFileName: ''
   artifactName: ''
   visualStudioVersion: ''
+  appInsightsInstrumentationKey: ''
 
 jobs:
 - job: ${{ parameters.name }}
   pool: ${{ parameters.pool }}
   variables:
     specFlowVisualStudioVersion: ${{ parameters.visualStudioVersion }}
+    instrumentationKey: ${{ parameters.appInsightsInstrumentationKey }}
   steps:
   - task: NuGetToolInstaller@0
     displayName: 'Use NuGet'
@@ -28,7 +30,7 @@ jobs:
     inputs: 
       filePath: build.ps1
       workingDirectory: ./
-      arguments: Release $(specFlowVisualStudioVersion)
+      arguments: Release $(specFlowVisualStudioVersion) -appInsightsInstrumentationKey $(instrumentationKey)
 
   - task: ArchiveFiles@2
     displayName: 'Archive $(Build.SourcesDirectory)'
