--- a/VsIntegration2017/TechTalk.SpecFlow.VsIntegration.2017.csproj
+++ b/VsIntegration2017/TechTalk.SpecFlow.VsIntegration.2017.csproj
@@ -35,17 +35,15 @@
     <ProductVersion>10.0.20305</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
     <ProjectTypeGuids>{82b43b9b-a64c-4715-b499-d71e9ca2bd60};{60dc8134-eba5-43b8-bcc9-bb4bc16c2548};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
-    <ProjectGuid>{96294E6F-8875-4D12-8577-4EC83E60BD6C}</ProjectGuid>
+    <ProjectGuid>{F3EFE63B-77C7-449E-B118-E16F445873C3}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>TechTalk.SpecFlow.VsIntegration</RootNamespace>
     <SolutionDir Condition="$(SolutionDir) == '' Or $(SolutionDir) == '*Undefined*'">..\</SolutionDir>
-    <AssemblyName>TechTalk.SpecFlow.VisualStudioIntegration</AssemblyName>
-    <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
-    <StartProgram>C:\Program Files %28x86%29\Microsoft Visual Studio\2019\Enterprise\Common7\IDE\devenv.exe</StartProgram>
-    <DefineConstants>$(DefineConstants);NET472</DefineConstants>
+    <AssemblyName>TechTalk.SpecFlow.VsIntegration.2017</AssemblyName>
+    <TargetFrameworkVersion>v4.6</TargetFrameworkVersion>
+    <StartProgram>C:\Program Files %28x86%29\Microsoft Visual Studio\2017\Enterprise\Common7\IDE\devenv.exe</StartProgram>
   </PropertyGroup>
-  
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
