adjust azure pipeline

--- a/build.yml
+++ b/build.yml
@@ -41,3 +41,21 @@ jobs:
     inputs:
       PathtoPublish: ${{ parameters.artifactFileName }} 
       ArtifactName: ${{ parameters.artifactName }}
+
+  - task: PublishBuildArtifacts@1
+    displayName: 'Publish Artifact: VS2019 Extension'
+    inputs:
+      PathtoPublish: '$(Build.SourcesDirectory)/VsIntegration/bin/Release/TechTalk.SpecFlow.VisualStudioIntegration.vsix'
+      ArtifactName: ${{ VS2019 }}
+
+  - task: PublishBuildArtifacts@1
+    displayName: 'Publish Artifact: VS2017 Extension'
+    inputs:
+      PathtoPublish: '$(Build.SourcesDirectory)/VsIntegration2017/bin/Release/TechTalk.SpecFlow.VsIntegration.2017.vsix'
+      ArtifactName: ${{ VS2017 }}
+
+  - task: PublishBuildArtifacts@1
+    displayName: 'Publish Artifact: VS2015 Extension'
+    inputs:
+      PathtoPublish: '$(Build.SourcesDirectory)/VsIntegration2015/bin/Release/TechTalk.SpecFlow.VsIntegration.2015.vsix'
+      ArtifactName: ${{ VS2015 }}      
