fix icon really

--- a/VsIntegration/TechTalk.SpecFlow.VsIntegration.csproj
+++ b/VsIntegration/TechTalk.SpecFlow.VsIntegration.csproj
@@ -123,9 +123,11 @@
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
       <IncludeInVSIX>true</IncludeInVSIX>
     </Content>
-    <Resource Include="..\Resources\specflowsetup.ico">
+    <Content Include="..\Resources\specflowsetup.ico">
       <Link>specflowsetup.ico</Link>
-    </Resource>
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      <IncludeInVSIX>true</IncludeInVSIX>
+    </Content>
     <Content Include="..\Resources\specflow_preview.png">
       <Link>specflow_preview.png</Link>
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
