fix context menu

--- a/VsIntegration2015/TechTalk.SpecFlow.VsIntegration.2015.csproj
+++ b/VsIntegration2015/TechTalk.SpecFlow.VsIntegration.2015.csproj
@@ -127,6 +127,10 @@
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
       <IncludeInVSIX>true</IncludeInVSIX>
     </Content>
+    <VSCTCompile Include="VisualStudioCommands.vsct">
+      <ResourceName>Menus.ctmenu</ResourceName>
+      <SubType>Designer</SubType>
+    </VSCTCompile>
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\IdeIntegration\TechTalk.SpecFlow.IdeIntegration.csproj">
